--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.5.3",
     "webpack-dev-server": "^2.7.1"
+  },
+  "dependencies": {
+    "vue": "^2.4.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.7.0"
   }
 }
